# tolove-ru

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY_REVIEW.md
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml  update-homebrew-formula.yml
.github/workfow/: release.yml
src/: lib.rs  main.rs  shape.rs
tests/: cli_args.rs  error_handling.rs
