[package]
name = "tolove-ru"
version = "1.2.0"
edition = "2021"
authors = ["Hidari <ika5140+github@gmail.com>"]
description = "A lovely terminal heart animation."
repository = "https://github.com/hidari/tolove-ru"
documentation = "https://github.com/hidari/tolove-ru#readme"
keywords = ["terminal", "animation", "heart", "ascii-art", "fun"]
categories = ["command-line-utilities", "visualization"]
license = "MIT"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[[bin]]
name = "love"
path = "src/main.rs"

[dependencies]
crossterm = "0.28.1"
ctrlc = "3.4.5"
clap = { version = "4.5.23", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
